update management tag
